added stylesheets, created new colors and removed a placeholder file for testing commits

--- a/src/Styles/themes/_defaultTheme.scss
+++ b/src/Styles/themes/_defaultTheme.scss
@@ -12,29 +12,42 @@ $primary-9: hsl(2, 60%, 88%);
 // light shades of the primary color
 
 // dark shades of the secondary color
-$secondary-0: hsl(140, 80%, 21%);
-$secondary-1: hsl(140, 80%, 29%);
-$secondary-2: hsl(140, 80%, 37%);
-$secondary-3: hsl(140, 80%, 45%);
-$secondary-4: hsl(140, 80%, 52%); // THE secondary color
-$secondary-5: hsl(140, 80%, 60%);
-$secondary-6: hsl(140, 80%, 67%);
-$secondary-7: hsl(140, 80%, 74%);
-$secondary-8: hsl(140, 80%, 81%);
-$secondary-9: hsl(140, 80%, 88%);
+$secondary-0: hsl(53, 80%, 21%);
+$secondary-1: hsl(53, 80%, 29%);
+$secondary-2: hsl(53, 80%, 37%);
+$secondary-3: hsl(53, 80%, 45%);
+$secondary-4: hsl(53, 80%, 52%); // THE secondary color
+$secondary-5: hsl(53, 80%, 60%);
+$secondary-6: hsl(53, 80%, 67%);
+$secondary-7: hsl(53, 80%, 74%);
+$secondary-8: hsl(53, 80%, 81%);
+$secondary-9: hsl(53, 80%, 88%);
 // light shades of the secondary color
 
+// dark shades of tertiary color
+$tertiary-0: hsl(30, 80%, 21%);
+$tertiary-1: hsl(30, 80%, 29%);
+$tertiary-2: hsl(30, 80%, 37%);
+$tertiary-3: hsl(30, 80%, 45%);
+$tertiary-4: hsl(30, 80%, 52%); // THE secondary color
+$tertiary-5: hsl(30, 80%, 60%);
+$tertiary-6: hsl(30, 80%, 67%);
+$tertiary-7: hsl(30, 80%, 74%);
+$tertiary-8: hsl(30, 80%, 81%);
+$tertiary-9: hsl(30, 80%, 88%);
+// light shades of tertiary color
+
 // dark shades of gray
-$gray-0: hsl(210, 40%, 21%);
-$gray-1: hsl(210, 40%, 29%);
-$gray-2: hsl(210, 20%, 37%);
-$gray-3: hsl(210, 20%, 45%);
-$gray-4: hsl(210, 20%, 52%); // THE secondary color
-$gray-5: hsl(210, 20%, 60%);
-$gray-6: hsl(210, 20%, 67%);
-$gray-7: hsl(210, 20%, 74%);
-$gray-8: hsl(210, 20%, 81%);
-$gray-9: hsl(210, 20%, 88%);
+$gray-0: hsl(2, 40%, 21%);
+$gray-1: hsl(2, 40%, 29%);
+$gray-2: hsl(2, 20%, 37%);
+$gray-3: hsl(2, 20%, 45%);
+$gray-4: hsl(2, 20%, 52%); // THE secondary color
+$gray-5: hsl(2, 20%, 60%);
+$gray-6: hsl(2, 20%, 67%);
+$gray-7: hsl(2, 20%, 74%);
+$gray-8: hsl(2, 20%, 81%);
+$gray-9: hsl(2, 20%, 88%);
 // light shades of gray
 
 // miscellaneous colors
