--- a/src/Styles/components/_navbar.scss
+++ b/src/Styles/components/_navbar.scss
@@ -2,120 +2,32 @@
 @use '../util/variables' as *;
 @use '../util/mixins' as *;
 
-.navbar {
-    background: $white;
-    box-shadow: $light-shadow;
-    .nav-center {
-        .nav-header {
-            @include flex-center;
-            justify-content: space-between;
-            padding: 1rem;
-        }
-        .nav-toggle {
-            font-size: 1.5rem;
-            color: $primary-4;
-            background: transparent;
-            border-color: transparent;
-            transition: $transition;
-            cursor: pointer;
-            &:hover {
-                transform: rotate(90deg);
-            }
-        }
-        .logo {
-            height: 30px;
-        }
-
-        .links-container {
-            height: 0;
-            overflow: hidden;
-            &.show {
-                height: auto;
-            }
-        }
-
-        .links li {
-            color: $gray-2;
-            font-size: 1rem;
-            text-transform: capitalize;
-            letter-spacing: $spacing;
-            display: block;
-            padding: 0.5rem 1rem;
-            transition: $transition;
-            position: relative;
-            &:hover {
-                background: $primary-8;
-                color: $primary-4;
-                padding-left: 1.5rem;
-                &::after {
-                    width: 100%;
-                }
-            }
-            &::after {
-                @include pseudo;
-                position: absolute;
-                bottom: 0;
-                width: 0;
-                height: 1px;
-                background: $primary-1;
-                transition: .1s ease-out all;
-            }
-        }
-
-        .social-icons {
-            display: flex;
-            overflow: hidden;
-            height: 0;
-            justify-content: space-around;
-            li {
-                margin: 0.5rem 1rem;
-            }
-            &.show {
-                height: auto;
-            }
-        }
-    }
+*, *::before, *::after{
+    margin: 0;
+    padding: 0;
 }
-@include tablet {
-    .navbar {
-        .nav-center {
-            max-width: 1200px;
-            @include center-auto;
-            @include flex-sapce-between;
-            padding: 1rem;
-            .logo {
-                height: 10px;
-            }
-
-            .nav-header {
-                padding: 0;
-            }
-            .nav-toggle {
-                display: none;
-            }
-            .links-container {
-                height: auto;
-            }
-            .links {
-                display: flex;
-                li {
-                    padding: 0;
-                    margin: 0 0.5rem;
-                    &:hover {
-                        padding: 0;
-                        background: transparent;
-                    }
-                }
-            }
-            .social-icons {
-                display: flex;
-                a {
-                    margin: 0 0.5rem;
-                    color: $primary-4;
-                    transition: $transition;
-                    &:hover {
-                        color: $primary-7;
-                    }
+.navbar{
+    background-color: $white;
+    color: $black;
+    height: 75px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: $light-shadow;
+    .navbar-content{
+        width: 50%;
+        ul{
+            list-style-type: none;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            li{
+                font-size: 1.1rem;
+                &:hover{
+                    color: $primary-5;
+                    text-decoration: underline;
+                    
                 }
             }
         }
