--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -262,7 +262,7 @@ h4 {
 
 p {
   margin-bottom: 1.25rem;
-  color: #2c4a68;
+  color: #682e2c;
 }
 
 @media only screen and (min-width: 768px) {
@@ -403,82 +403,6 @@ p {
   margin-bottom: 0;
 }
 
-.spinner {
-  width: 100px;
-  height: 100px;
-  margin-left: auto;
-  margin-right: auto;
-  border: 3px solid #c5cfd8;
-  border-top-color: #2c4a68;
-  border-radius: 50%;
-  animation: spinner 1s ease-in-out infinite;
-}
-@keyframes spinner {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.single-item {
-  background: #ffffff;
-  border-radius: 0.25rem;
-  margin: 2rem 0;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-  border-radius: 0.25rem;
-  transition: all 0.5s linear;
-}
-.single-item img {
-  width: 100%;
-  height: 20rem;
-  object-fit: cover;
-  border-top-right-radius: 0.25rem;
-  border-top-left-radius: 0.25rem;
-}
-.single-item:hover {
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-}
-.single-item footer {
-  padding: 1.5rem 2rem;
-}
-.single-item .item-info {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  justify-content: space-between;
-  margin-bottom: 1.5rem;
-}
-.single-item .item-info h4 {
-  margin-bottom: 0;
-}
-.single-item .item-price {
-  color: #ce403b;
-  background: #f3cfce;
-  padding: 0.25rem 0.5rem;
-  border-radius: 0.25rem;
-}
-.single-item .delete-btn {
-  display: block;
-  width: 200px;
-  margin: 1rem auto 0 auto;
-  color: darkred;
-  letter-spacing: 0.1rem;
-  background: transparent;
-  border: 1px solid darkred;
-  padding: 0.25rem 0.5rem;
-  border-radius: 0.25rem;
-  transition: all 0.5s linear;
-}
-.single-item .delete-btn:hover {
-  color: white;
-  background: red;
-}
-.single-item button {
-  color: #ce403b;
-  padding-left: 0.5rem;
-  font-size: 1.1rem;
-  font-style: italic;
-}
-
 .navbar {
   background: #ffffff;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -512,7 +436,7 @@ p {
   height: auto;
 }
 .navbar .nav-center .links li {
-  color: #4b5e71;
+  color: #714d4b;
   font-size: 1rem;
   text-transform: capitalize;
   letter-spacing: 0.1rem;
@@ -600,19 +524,17 @@ p {
     color: #e49895;
   }
 }
-.tours {
-  max-width: 620px;
-  margin-bottom: 4rem;
+.home {
+  height: 100vh;
+  background-image: url(./images/placeholder.jpg);
+  background-size: cover;
 }
-.tours .title {
-  text-align: center;
-  margin-bottom: 4rem;
-  margin-top: 2rem;
-}
-.tours .underline {
-  width: 8rem;
-  height: 0.25rem;
-  background: #ce403b;
-  margin-left: auto;
-  margin-right: auto;
+.home .container {
+  margin-top: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: transparent;
+  box-shadow: none;
 }/*# sourceMappingURL=main.css.map */
