--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -433,4 +433,19 @@ p {
 .navbar .navbar-content ul li:hover {
   color: #d6605c;
   text-decoration: underline;
+}
+
+.home {
+  height: 100vh;
+  background-image: url(./images/placeholder.jpg);
+  background-size: cover;
+}
+.home .container {
+  margin-top: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: transparent;
+  box-shadow: none;
 }/*# sourceMappingURL=main.css.map */
