added logo to navbar

--- a/src/Styles/components/_navbar.scss
+++ b/src/Styles/components/_navbar.scss
@@ -15,6 +15,10 @@
     align-items: center;
     justify-content: space-between;
     box-shadow: $light-shadow;
+    background-image: url(./images/logo.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    
     .navbar-content{
         width: 50%;
         ul{
