Started the about page

--- a/src/Styles/components/_home.scss
+++ b/src/Styles/components/_home.scss
@@ -9,6 +9,7 @@
     .container{
         margin-top: 25%;
         @include flex-center;
+        text-align: center;
         flex-direction: column;
         background-color: transparent;
         box-shadow: none;
