--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -330,6 +330,10 @@ body {
   }
 }
 .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
   width: 90vw;
   margin: 5rem auto;
   max-width: 920px;
@@ -417,6 +421,8 @@ p {
   align-items: center;
   justify-content: space-between;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  position: sticky;
+  top: 0;
 }
 .navbar .navbar-content {
   width: 50%;
@@ -433,4 +439,20 @@ p {
 .navbar .navbar-content ul li:hover {
   color: #d6605c;
   text-decoration: underline;
+}
+
+.home {
+  height: 100vh;
+  background-image: url(./images/placeholder.jpg);
+  background-size: cover;
+}
+.home .container {
+  margin-top: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  background-color: transparent;
+  box-shadow: none;
 }/*# sourceMappingURL=main.css.map */
