--- a/src/Styles/components/_home.scss
+++ b/src/Styles/components/_home.scss
@@ -6,6 +6,8 @@
     height: 100vh;
     background-image: url(./images/placeholder.jpg);
     background-size: cover;
+    background-position: center;
+    
     .container{
         margin-top: 25%;
         @include flex-center;
