--- a/src/Styles/components/_navbar.scss
+++ b/src/Styles/components/_navbar.scss
@@ -7,6 +7,9 @@
     padding: 0;
 }
 .navbar{
+    position: sticky;
+    top: 0;
+    
     background-color: $white;
     color: $black;
     height: 75px;
