--- a/src/Styles/layout/_app.scss
+++ b/src/Styles/layout/_app.scss
@@ -11,9 +11,8 @@
 
 @include large {
     .container {
-        display: grid;
-        grid-template-columns: 250px 1fr;
-        grid-gap: 1rem;
+        @include flex-center;
+        flex-direction: row;
     }
 }
 
