--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -324,9 +324,10 @@ body {
 
 @media only screen and (min-width: 768px) {
   .container {
-    display: grid;
-    grid-template-columns: 250px 1fr;
-    grid-gap: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
   }
 }
 .container {
@@ -413,6 +414,8 @@ p {
 }
 
 .navbar {
+  position: sticky;
+  top: 0;
   background-color: #ffffff;
   color: #222222;
   height: 75px;
@@ -446,6 +449,7 @@ p {
   height: 100vh;
   background-image: url(./images/placeholder.jpg);
   background-size: cover;
+  background-position: center;
 }
 .home .container {
   margin-top: 25%;
