replacing contact with a more concise footer

--- a/src/Styles/components/_footer.scss
+++ b/src/Styles/components/_footer.scss
@@ -4,10 +4,7 @@
 
 .contact-container {
     @include flex-center;
-    flex-direction: column;
     a {
-        width: 115px;
-        height: 25px;
-        color: $primary-3;
+        color: darkblue;
     }
 }
