tons of changes

--- a/src/Styles/components/_about.scss
+++ b/src/Styles/components/_about.scss
@@ -3,6 +3,9 @@
 @use '../util/mixins' as *;
 
 .about {
+    h2{
+        color: $primary-3;
+    }
     height: 100vh;
     .container{
         @include flex-space-between;
