--- a/src/Styles/base/_global.scss
+++ b/src/Styles/base/_global.scss
@@ -2,6 +2,8 @@
 @use '../util/variables' as *;
 @use '../util/mixins' as *;
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 *, *::after, *::before {
     margin: 0;
     padding: 0;
@@ -64,7 +66,7 @@ main {
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Bebas Neue', cursive;
     background: $gray-9;
     color: $primary-2;
     line-height: 1.5;
