--- a/src/Styles/components/_home.scss
+++ b/src/Styles/components/_home.scss
@@ -3,11 +3,21 @@
 @use '../util/mixins' as *;
 
 .home{
+    color: $white;
     height: 100vh;
-    background-image: url(./images/placeholder.jpg);
+    background-image: url(./images/backgroundcrop.jpg); 
     background-size: cover;
+    text-shadow: 3px 3px rgba(0, 0, 0, 0.5);
+    p{
+        color: $white;
+        font-size: 1.5rem;
+    }
+
+
     background-position: center;
-    
+    .section{
+        filter: none;
+    }
     .container{
         margin-top: 25%;
         @include flex-center;
