--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 *,
 *::after,
 *::before {
@@ -301,7 +302,7 @@ main {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Bebas Neue", cursive;
   background: #e7dbda;
   color: #972a26;
   line-height: 1.5;
@@ -446,10 +447,19 @@ p {
 }
 
 .home {
+  color: #ffffff;
   height: 100vh;
-  background-image: url(./images/placeholder.jpg);
+  background-image: url(./images/backgroundcrop.jpg);
   background-size: cover;
+  text-shadow: 3px 3px rgba(0, 0, 0, 0.5);
   background-position: center;
+}
+.home p {
+  color: #ffffff;
+  font-size: 1.5rem;
+}
+.home .section {
+  filter: none;
 }
 .home .container {
   margin-top: 25%;
@@ -464,6 +474,9 @@ p {
 
 .about {
   height: 100vh;
+}
+.about h2 {
+  color: #b8322e;
 }
 .about .container {
   display: flex;
