added content to footer and made it somewhat responsive??

--- a/src/Styles/components/_footer.scss
+++ b/src/Styles/components/_footer.scss
@@ -2,9 +2,17 @@
 @use '../util/variables' as *;
 @use '../util/mixins' as *;
 
-.contact-container {
+.footer {
     @include flex-center;
+    justify-content: center;
+    align-items: center;
+    p {
+        padding-right: 1rem;
+    }
     a {
-        color: darkblue;
+        @include tablet {
+            height: 17px;
+        }
+        height: 38px;
     }
 }
