--- a/src/Styles/components/_navbar.scss
+++ b/src/Styles/components/_navbar.scss
@@ -9,7 +9,7 @@
 .navbar{
     position: sticky;
     top: 0;
-    
+
     background-color: $white;
     color: $black;
     height: 75px;
@@ -23,6 +23,9 @@
     background-repeat: no-repeat;
     
     .navbar-content{
+        @include tablet{
+            width: 30%;
+        }
         width: 50%;
         ul{
             list-style-type: none;
@@ -30,11 +33,15 @@
             flex-direction: row;
             justify-content: space-evenly;
             li{
+                @include tablet{
+                    font-size: 1.5rem;
+                }
                 font-size: 1.1rem;
                 &:hover{
+                    
                     color: $primary-5;
                     text-decoration: underline;
-                    
+                    cursor: pointer;
                 }
             }
         }
