--- a/src/Styles/components/_about.scss
+++ b/src/Styles/components/_about.scss
@@ -3,10 +3,19 @@
 @use '../util/mixins' as *;
 
 .about {
-    h2{
+    h2 {
         color: $primary-3;
     }
-    height: 100vh;
+    h3 {
+        margin: 1rem 1rem;
+        color: $primary-5;
+    }
+    .row-1{
+        border-bottom: 1px solid black;
+        padding-bottom: .5rem;
+        margin-bottom: .5rem;
+    }
+    height: auto;
     .container{
         @include flex-space-between;
         flex-direction: column;
@@ -26,11 +35,15 @@
         padding-bottom: 0;
         margin-bottom: 0;
         border-bottom: none;
-    }
-    .right-p{
-        padding-left: 1.2rem;
-        border-left: 1px solid black;
-    }
+        }
+        .right-p{
+            padding-left: 1.2rem;
+            border-left: 1px solid black;
+        }
+        .row-1{
+            border-bottom: none;
+            padding-right: 1.2rem;
+        }
     }
     
 }
