--- a/src/Styles/components/_home.scss
+++ b/src/Styles/components/_home.scss
@@ -4,9 +4,10 @@
 
 .home{
     color: $white;
-    height: 100vh;
-    background-image: url(./images/backgroundcrop.jpg); 
+    height: 90vh;
+    background-image: url(./images/backgroundcropagain.jpg); 
     background-size: cover;
+    
     text-shadow: 3px 3px rgba(0, 0, 0, 0.5);
     p{
         color: $white;
