--- a/src/Styles/components/_navbar.scss
+++ b/src/Styles/components/_navbar.scss
@@ -22,6 +22,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     
+    
     .navbar-content{
         @include tablet{
             width: 30%;
@@ -33,6 +34,14 @@
             flex-direction: row;
             justify-content: space-evenly;
             li{
+                a{
+                    &:visited{
+                        color: $black;
+                        &:hover{
+                            color: $primary-5;
+                        }
+                    }
+                }
                 @include tablet{
                     font-size: 1.5rem;
                 }
