fixed most problems

--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -555,4 +555,66 @@ p {
   .footer a {
     height: 17px;
   }
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+}
+@media only screen and (min-width: 768px) {
+  .contact {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
+.contact h2 {
+  color: #b8322e;
+}
+.contact h3 {
+  margin: 1rem 1rem;
+  color: #d6605c;
+}
+.contact .row-1 {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid black;
+  padding-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.contact .container {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  text-align: center;
+}
+@media only screen and (min-width: 768px) {
+  .contact .container {
+    flex-direction: row;
+  }
+}
+.contact .left-p {
+  border-bottom: 1px solid black;
+  padding-bottom: 1rem;
+  margin-bottom: 0.5rem;
+}
+@media only screen and (min-width: 768px) {
+  .contact .left-p {
+    padding-right: 0.8rem;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    border-bottom: none;
+  }
+  .contact .right-p {
+    padding-left: 1.2rem;
+    border-left: 1px solid black;
+  }
+  .contact .row-1 {
+    border-bottom: none;
+    padding-right: 1.2rem;
+  }
+}
+.contact iframe {
+  width: auto;
+  height: auto;
 }/*# sourceMappingURL=main.css.map */
