--- a/src/Styles/components/_contact.scss
+++ b/src/Styles/components/_contact.scss
@@ -3,8 +3,15 @@
 @use '../util/mixins' as *;
 
 .contact {
-    display: flex;
-    flex-direction: row;
+    
+        display: flex;
+    flex-direction: column;
+    @include tablet{
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    
+    
     h2 {
         color: $primary-3;
     }
@@ -14,13 +21,15 @@
     }
     .row-1{
         display: flex;
+        flex-direction: column;
         border-bottom: 1px solid black;
         padding-bottom: .5rem;
         margin-bottom: .5rem;
     }
     height: auto;
     .container{
-        @include flex-space-between;
+        display: flex;
+        justify-content: space-evenly;
         flex-direction: column;
         @include tablet{
             flex-direction: row;
